# kalman

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: benchmark.yml  bindings.yml  ci.yml
benchmark/: CMakeLists.txt  main.cpp
benchmark/lib/: Benchmark.hpp
bindings/: KalmanWrapper.hpp  README.md
bindings/python/: CMakeLists.txt  kalman_py.cpp  test_kalman.py
bindings/r/kalmanr/: DESCRIPTION  LICENSE  NAMESPACE
bindings/r/kalmanr/R/: kalman.R
bindings/r/kalmanr/src/: Makevars  kalman_r.cpp
bindings/r/kalmanr/tests/: testthat.R
bindings/r/kalmanr/tests/testthat/: test-kalman.R
cmake/: Eigen.cmake  KalmanConfig.cmake.in
examples/: CMakeLists.txt
examples/Robot1/: OrientationMeasurementModel.hpp  PositionMeasurementModel.hpp  SystemModel.hpp  main.cpp
examples/Template/: main.cpp
include/kalman/: Concepts.hpp  ExtendedKalmanFilter.hpp  KalmanFilterBase.hpp  LinearizedMeasurementModel.hpp  LinearizedSystemModel.hpp  Matrix.hpp  MeasurementModel.hpp  SquareRootBase.hpp  SquareRootExtendedKalmanFilter.hpp  SquareRootFilterBase.hpp  SquareRootUnscentedKalmanFilter.hpp  StandardBase.hpp  StandardFilterBase.hpp  SystemModel.hpp  Types.hpp  UnscentedKalmanFilter.hpp  UnscentedKalmanFilterBase.hpp
scripts/: benchmark_compare.py  update_readme_benchmark.py
test/: CMakeLists.txt  ExtendedKalmanFilter.cpp  Matrix.cpp  SquareRootBase.cpp  SquareRootExtendedKalmanFilter.cpp  SquareRootUnscentedKalmanFilter.cpp  StandardBase.cpp  TestHelper.h  UnscentedKalmanFilter.cpp  UnscentedKalmanFilterBase.cpp  main.cpp
test/lib/: Test.hpp
test/models/: Quadratic.hpp
